--- a/index.html
+++ b/index.html
@@ -5,14 +5,7 @@
   <meta name="description" content="Universal Open Source Client-Side Paper Wallet Generator for BitCoins and other cryptocurrencies. Create your own paper wallet in a few easy steps : Generate, Print and Fold !">
   <meta name="keywords" content="universal, paper, wallet, generator, cryptocurrencies, bitcoin, litecoin, dogecoin" />
 
-  <!--
-
-Notice of Copyrights and Licenses:
-
-  GitHub Repository: https://github.com/flash-coin/paperwallet
-  -->
-
-  <title>FLASH Paperwallet - Universal Paper wallet generator for Flashcoin</title>
+  <title>WE Paperwallet - Universal Paper wallet generator for Wecoin</title>
   <link rel="icon" href="favicon.png" type="image/png" sizes="16x16">
   <script src="js/jquery.js"></script>
   <script src="js/main.js"></script>
@@ -9276,9 +9269,9 @@ function QRCodeScanner(width, height, container, success, error) {
 <style type="text/css">
 .more { background: url("./images/plus.png") no-repeat left center; width: 17px; height: 17px; display: inline-block; float: right; }
 .less { background: url("./images/minus.png") no-repeat left center; width: 17px; height: 17px; display: inline-block; float: right; }
-a { position: relative; z-index: 11; text-decoration: none; color: #d58424; }
+a { position: relative; z-index: 11; text-decoration: none; color: #2B6CD5; }
 .right { text-align: right; }
-.walletarea { display: none; border: 1px solid #BFBFBF; background-color: white; }
+.walletarea { display: none; border: 1px solid #D5D5D5; background-color: #F4F4F4; }
 hr { margin: 20px 0; border-top: 1px dashed #008000; }
 .keyarea { height: 110px; text-align: left; position: relative; padding: 25px 25px 10px; }
 .keyarea .public { float: left; }
@@ -9290,15 +9283,15 @@ hr { margin: 20px 0; border-top: 1px dashed #008000; }
 .keyarea .qrcode_private { display: inline-block; position: relative; top: 28px; float: right; }
 .pubkeyhex { word-wrap: break-word; }
 html { height: 100%; }
-body { font-family: Arial; background-color:#000; height: 100%;margin: 0px !important; }
+body { font-family: Arial; background-color:#FFF; height: 100%;margin: 0px !important; }
 .faqs ol { padding: 0 0 0 25px; }
 .faqs li { padding: 3px 0; }
 .question { padding: 10px 15px; text-align: left; cursor: pointer; }
 .question:hover, .expandable:hover { color: #77777A; }
 .answer { padding: 0 15px 10px 25px; text-align: left; display: none; font-size: 80%; }
-.faq { border: 0; border-top: 1px solid #BFBFBF; }
+.faq { border: 0; border-top: 1px solid #D5D5D5; }
 
-#initBanner { position: relative; text-align: left; padding: 15px; background-color: white; border-bottom: 1px solid #bfbfbf; }
+#initBanner { position: relative; text-align: left; padding: 15px; background-color: #F4F4F4; border-bottom: 1px solid #D5D5D5; }
 #walletCommands { display: none; }
 #keyarea { display: none; }
 
@@ -9311,23 +9304,23 @@ body { font-family: Arial; background-color:#000; height: 100%;margin: 0px !impo
 #btcaddress, #btcprivwif, #detailaddress, #detailaddresscomp, #detailprivwif, #detailprivwifcomp { font-family: monospace; font-size: 1.25em; }
 #seedpoolarea { display: none; }
 #seedpooldisplay {  font-family: monospace; font-size: 1em; width: 640px; padding: 15px 5px; word-wrap: break-word; min-height: 98px; }
-.seedpoint { width: 6px; height: 6px; display: block; border-radius: 3px; background-color: #80CF80; position: absolute; z-index: 10; }
+.seedpoint { width: 6px; height: 6px; display: block; border-radius: 3px; background-color: #0047A2; position: absolute; z-index: 10; }
 
 #seedSkipper { font-size: 11px; text-align: center; line-height: 14px;}
 #skipMessage { margin-top: 8px; }
 
 #generate #mousemovelimit { font-size: 16px; color: #FFF; }
 #rightArea { position: absolute; right: 66px; top: 62px; width: 170px; }
-#progress-bar { width: 170px; background:#80CF80; position: relative; margin-bottom: 20px;
+#progress-bar { width: 170px; background:#C4C4F8; position: relative; margin-bottom: 20px;
   -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;
  }
-#progress-bar-percentage { background:#FFA247; padding: 3px 0px; text-align: center; height: 18px;
+#progress-bar-percentage { background:#0047A2; padding: 3px 0px; text-align: center; height: 18px;
   -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;
  }
 #progress-bar-percentage span { display: inline-block; position: absolute; width: 100%; left: 0; }
 .nicerButton { font-size: 14px; }
 
-#generate { font-size: 13px; text-align: left; position: relative; padding: 20px; border: 1px solid #BFBFBF; background-color: white; -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px; }
+#generate { font-size: 13px; text-align: left; position: relative; padding: 20px; border: 1px solid #D5D5D5; background-color: white; -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px; }
 #generate span { padding: 5px 5px 0 5px; }
 #generatekeyinput { position: relative; z-index: 11; }
 
@@ -9337,7 +9330,7 @@ body { font-family: Arial; background-color:#000; height: 100%;margin: 0px !impo
 
 h1 { margin: 0px; height: 91px; }
 
-#keyarea { height: 250px; border-bottom: 1px solid #bfbfbf; }
+#keyarea { height: 250px; border-bottom: 1px solid #D5D5D5; }
 #keyarea .pubaddress { float: none; display: block; padding: 0; height: auto; }
 #keyarea .label { text-decoration: none; }
 #keyarea .privwif { float: none; text-align: right; position: relative; padding: 0; }
@@ -9348,7 +9341,7 @@ h1 { margin: 0px; height: 91px; }
 #singlearea { font-size: 90%; display: block; }
 #singlesecret { position: relative; top: -130px; float: right; right: 200px; color: red; font-weight: bolder; font-size: 200%;  }
 #singleshare { position: relative; top: -110px; float: left; left: 160px; color: green; font-weight: bolder; font-size: 200%;  }
-#singlesafety { text-align: left; border-bottom: 1px solid #bfbfbf; position: relative; min-height: 500px; }
+#singlesafety { text-align: left; border-bottom: 1px solid #D5D5D5; position: relative; min-height: 500px; }
 
 #singlesafety p { font-size: 13px; }
 
@@ -9434,7 +9427,7 @@ h1 { margin: 0px; height: 91px; }
 .backLogo { float: right; width: 50px; height: 50px; }
 
 #paperarea { min-height: 120px; display: none; }
-#paperarea .keyarea { border: 1px solid #BFBFBF; border-top: 0; }
+#paperarea .keyarea { border: 1px solid #D5D5D5; border-top: 0; }
 #paperarea .keyarea.art { display: block; height: auto; border: 0; font-family: Ubuntu, Arial; padding: 0; margin: 0; }
 #paperarea .artwallet .papersvg { width: 1004px; height: 426px; border: 0; margin: 0; padding: 0; left: 0; }
 #paperarea .artwallet .qrcode_public { top: 263px; left: 780px; z-index: 100; margin: 0; float: none; display: block; position: absolute; background-color: #FFFFFF;
@@ -9556,13 +9549,13 @@ h1 { margin: 0px; height: 91px; }
 {
   #tagline { margin: 0 0 15px 0; font-style: italic; text-align: left; }
   .menu { text-align: left; }
-  .menu .tab { border-top-left-radius: 5px; border-top-right-radius: 5px; display: inline-block; background-color: #F5F5F5;
-          border: 1px solid #BFBFBF; padding: 5px; margin: 0 2px 0 0; position: relative; top: 1px; z-index: 110; cursor: pointer; }
+  .menu .tab { border-top-left-radius: 5px; border-top-right-radius: 5px; display: inline-block; background-color: #FFF;
+          border: 1px solid #D5D5D5; padding: 5px; margin: 0 2px 0 0; position: relative; top: 1px; z-index: 110; cursor: pointer; }
   .menu .tab:hover { color: #d58424; }
-  .menu .tab.selected { background-color: #FFF; border-bottom: 1px solid #FFF; cursor: default; }
+  .menu .tab.selected { background-color: #F4F4F4; border-bottom: 1px solid #FFF; cursor: default; }
   .menu .tab.selected:hover { color: #000; }
   .pagebreak { height: 50px; }
-  .commands { border-bottom: 1px solid #BFBFBF;  padding: 10px 2px; margin-bottom: 0; background-color: white; }
+  .commands { border-bottom: 1px solid #D5D5D5;  padding: 10px 2px; margin-bottom: 0; background-color: #F4F4F4; }
   .commands .row { padding: 0 0; text-align: left; }
   .commands .row.extra { padding-top: 6px; }
   .commands span { padding: 0 10px; }
@@ -9584,7 +9577,7 @@ h1 { margin: 0px; height: 91px; }
   #detailcommands span { padding: 0 10px; }
   #detailprivkey { width: 300px; }
   #detailprivkeypassphrase { width: 250px; }
-  .paper .commands { border: 1px solid #BFBFBF; }
+  .paper .commands { border: 1px solid #D5D5D5; }
   #bulkstartindex { width: 35px; }
   #bulklimit { width: 45px; }
 
@@ -9604,7 +9597,7 @@ h1 { margin: 0px; height: 91px; }
   #main { width: auto; }
   #singlearea { border: 0; }
   #singlesafety { border: 0; }
-  #paperarea .keyarea:first-child { border-top: 1px solid #BFBFBF; }
+  #paperarea .keyarea:first-child { border-top: 1px solid #D5D5D5; }
   #paperarea .keyarea.art:first-child { border: 0; }
   .pagebreak { height: 1px; }
   .paper #logo { display: none; }
@@ -9656,58 +9649,17 @@ h1 { margin: 0px; height: 91px; }
 </head>
 <body onclick="SecureRandom.seedTime();" onmousemove="ninja.seeder.seed(event);" class="header-expanded">
 <header class="header cf">
-  <div class="container">
-     <a class="navbar-brand top" href="#"><img src="images/paper_wallet_logo.png" alt="logo"></a>
+  	<div class="container">
+    <a class="navbar-brand top" href="#"><img src="images/paper_wallet_logo.png" alt="logo"></a>
 
-     <!-- <a href="javascript:void(0)" class="nav-toggle notext"><i class="ico-menu"></i></a> -->
-
-     <nav class="nav">
-       <ul class="cf">
-         <li class="parrent_li"><a href="javascript:void(0)">About</a>
-             <ul class="sub-menu">
-                     <li><a href="https://www.flashcoin.io/#about" target="_blank">What is Flash</a></li>
-                     <li><a href="https://www.flashcoin.io/#flash-advantage" target="_blank">Flash Advantages</a></li>
-                     <li><a href="https://www.flashcoin.io/#team" target="_blank">Team</a></li>
-                     <li><a href="https://www.flashcoin.io/#roadmap" target="_blank">Roadmap</a></li>
-                     <li><a href="https://www.flashcoin.io/#news" target="_blank">News</a></li>
-                     <li><a href="https://www.flashcoin.io/#exchanges" target="_blank">Exchanges</a></li>
-                     <li><a href="https://www.flashcoin.io/#partners" target="_blank">Partners</a></li>
-                     <li><a href="https://www.flashcoin.io/#feature-flash" target="_blank">Upcoming Features</a></li>
-             </ul>
-         </li>
-       <li class="parrent_li"><a href="#" data-hash="web-wallet">Wallets</a>
-              <ul class="sub-menu">
-                 <li><a href="https://www.flashcoin.io/#wallet" target="_blank">Web Wallet</a></li>
-                 <li><a href="https://play.google.com/store/apps/details?id=com.flash.wallet.android" target="_blank">Android Wallet</a></li>
-                 <li><a href="https://www.flashcoin.io/#wallet" target="_blank">QT Wallet Downloads</a></li>
-                 <li><a href="https://www.flashcoin.io/flash-snapshot.html" target="_blank">Flash Snapshot</a></li>
-                 <li><a href="https://www.flashcoin.io/#wallet" target="_blank">Third Party Wallets</a></li>
-             </ul>
-         </li>
-   <li class="parrent_li"><a href="javascript:void(0)">Resources</a>
-             <ul class="sub-menu">
-                     <li><a href="https://www.flashcoin.io/#whitepaper" target="_blank">Whitepaper</a></li>
-                     <li><a href="https://github.com/flash-coin/" target="_blank">Github</a></li>
-                     <li><a href="https://explorer.flashcoin.io/" target="_blank">Explorer</a></li>
-                     <li><a href="https://charts.flashcoin.io/" target="_blank">Charts</a></li>
-                     <li><a href="https://nodes.flashcoin.io/" target="_blank">Nodes</a></li>
-             </ul>
-         </li>
-         <li class="parrent_li"><a href="https://www.flashcoin.io/#social-forum" target="_blank">Community</a>
-         </li>
-         <li class="parrent_li"><a href="javascript:void(0)">Get Started</a>
-             <ul class="sub-menu">
-                     <li><a href="https://www.flashcoin.io/guides.html" data-hash="whitepaper" target="_blank">How to use FLASH Web Wallet</a></li>
-                     <li><a href="https://www.flashcoin.io/guides3.html" target="_blank">How to use FLASH QT Wallet</a></li>
-                     <li><a href="https://www.flashcoin.io/guides2.html" target="_blank">How to Buy Bitcoin using Coinbase</a></li>
-					 <li><a href="https://www.flashcoin.io/paper-wallet-cold-storage-guide.html" target="_blank">How to create a safe FLASH coin paper wallet for cold storage</a></li>
-                     <li><a href="https://www.flashcoin.io/tutorials.html" target="_blank">Video Tutorials</a></li>
-             </ul>
-         </li>
-   <li class="divider-mobile"></li>
- </ul>
-</nav>
-</div>
+    <nav class="nav">
+       	<ul class="cf">
+       	<li class="parrent_li"><a href="https://wallet.we-coin.io/" target="_blank" data-hash="web-wallet">Web Wallet</a></li>
+   		<li class="parrent_li"><a href="https://explorer.we-coin.io/" target="_blank">Explorer</a></li>
+   		<li class="divider-mobile"></li>
+ 		</ul>
+	</nav>
+	</div>
 </header>
   <div id="busyblock"></div>
   <div id="main">
@@ -9799,7 +9751,7 @@ h1 { margin: 0px; height: 91px; }
 
             <h3 id="securitystep0title" class="i18n">Step 0. Follow the security checklist recommendation</h3>
             <p id="securitystep0" class="i18n">
-              First step is to <strong>download</strong> this website from <a href="https://github.com/flash-coin/paperwallet/archive/master.zip">Github</a> and open the index.html file directly from your computer. It's just too easy to sneak some evil code in the 6000+ lines of javascript to leak your private key, and you don't want to see your fund stolen. Code version control make it much easier to cross-check what actually run. For extra security, <strong>unplug your Internet access</strong> while generating your wallet.
+              First step is to <strong>download</strong> this website from <a href="https://github.com/flash-coin/we-paperwallet/archive/master.zip">Github</a> and open the index.html file directly from your computer. It's just too easy to sneak some evil code in the 6000+ lines of javascript to leak your private key, and you don't want to see your fund stolen. Code version control make it much easier to cross-check what actually run. For extra security, <strong>unplug your Internet access</strong> while generating your wallet.
             </p>
             <h3 id="securitystep1title" class="i18n">Step 1. Generate new address</h3>
             <p id="securitystep1" class="i18n">
@@ -9856,7 +9808,7 @@ h1 { margin: 0px; height: 91px; }
             We try to make it that way ! The core of the tool, that generate the keys is 99% the same as the well reviewed bitaddress.org.
           </p>
           <p class="faqAnswer" id="faqQuestion1.1">
-Flashcoin Paper Wallet Generate use the best security measures. All-in-one html document, no ajax, no analytics, no external calls, no CDN that can inject anything they want. And trust us, we have seen some nasty things when reviewing some wallet generator.
+Wecoin Paper Wallet Generate use the best security measures. All-in-one html document, no ajax, no analytics, no external calls, no CDN that can inject anything they want. And trust us, we have seen some nasty things when reviewing some wallet generator.
           </p>
 
           <h3 class="faqQuestion"><a class="faqLink" onclick="ninja.toggleFaqQuestion('faqQuestion2');">&#8226; Why should I use a paper wallet ?</a></h3>
@@ -9873,12 +9825,12 @@ Flashcoin Paper Wallet Generate use the best security measures. All-in-one html 
 
           <h3 class="faqQuestion"><a class="faqLink" onclick="ninja.toggleFaqQuestion('faqQuestion4');">&#8226; How to spend the coins stored in a paper wallet ?</a></h3>
           <p class="faqAnswer" id="faqQuestion4">
-            You will need to import your private key in a real client, that you can download from the Flashcoin website. The exact method to do that will depend on the client. If there is no integrated method, you can usually fall back to the debug console and use the command “importprivkey [yourprivatekey]“.
+            You will need to import your private key in a real client, that you can download from the Wecoin website. The exact method to do that will depend on the client. If there is no integrated method, you can usually fall back to the debug console and use the command “importprivkey [yourprivatekey]“.
           </p>
 
           <h3 class="faqQuestion"><a class="faqLink" onclick="ninja.toggleFaqQuestion('faqQuestion9');">&#8226; I found a bug, what shall I do ?</a></h3>
           <p class="faqAnswer" id="faqQuestion9">
-            You can report bugs using GitHub. You can also send us an email at (<a href="mailto:support@flashcoin.io">support@flashcoin.io</a>). Just try to explain clearly what is wrong and we will try to fix the bug as soon as possible.
+            You can report bugs using GitHub. You can also send us an email at (<a href="mailto:support@we-coin.io">support@we-coin.io</a>). Just try to explain clearly what is wrong and we will try to fix the bug as soon as possible.
           </p>
 
           <h3 class="faqQuestion"><a class="faqLink" onclick="ninja.toggleFaqQuestion('faqQuestion11');">&#8226; How can I help ?</a></h3>
@@ -10071,7 +10023,7 @@ Flashcoin Paper Wallet Generate use the best security measures. All-in-one html 
 </div>
     <div id="footer" class="footer">
       <div style="text-align: center;">
-        <span class="item">FLASH is supported by the Third Millennium Foundation for Economics and Culture, Liechtenstein, and the FLASH community worldwide.</span>
+        <span class="item">WE is supported by the Third Millennium Foundation for Economics and Culture, Liechtenstein, and the WE community worldwide.</span>
       </div>
     </div>
 
@@ -10437,6 +10389,7 @@ janin.currencies = [
     janin.currency.createCurrency ("WACoins",             0x49, 0xc9, "7",    "W"    , ""),
     janin.currency.createCurrency ("WankCoin",            0x00, 0x80, "5",    "[LK]" , "1CnEFZZxJQkNAvgFGdRV5JEKShkNj1LRWL"),
     janin.currency.createCurrency ("WeAreSatoshiCoin",    0x87, 0x97, "6",    "P"    , "wSEgPsCGqQESLDyzBJkwCXvMP1z3e1Qi3X"),
+    janin.currency.createCurrency ("Wecoin",              0x49, 0xc9, "7",    "W" , "WX2LjMwbamSjC1EPvD6hcnAD9APdxLgCDn"),
     janin.currency.createCurrency ("WorldCoin",           0x49, 0xc9, "7",    "W"    , "WNmGkn2WQZKS6xKHEsj5AqSbuE4sh9Upyb"),
     janin.currency.createCurrency ("XP",                  0x4b, 0xcb, "7",    "X"    , "XLRykcGjFMpBDQ7PHfamR2DR4Z21qTUBHG"),
     janin.currency.createCurrency ("Yenten",              0x4e, 0x7b, "5",    "K"    , "YStuCpv1U9iT3L1VqBr52B9nBxrNgt4Fpj"),
@@ -13208,7 +13161,7 @@ if (ninja.getQueryString()["showseedpool"] == "true" || ninja.getQueryString()["
 	document.getElementById("seedpoolarea").style.display = "block";
 }
 // change currency
-var currency = "flashcoin";//ninja.getQueryString()["currency"] || "bitcoin";
+var currency = "wecoin";//ninja.getQueryString()["currency"] || "bitcoin";
 currency = currency.toLowerCase();
 for(i = 0; i < janin.currencies.length; i++) {
 	if (janin.currencies[i].name.toLowerCase() == currency)
